--- a/audio3d_autoplay.html
+++ b/audio3d_autoplay.html
@@ -11,6 +11,6 @@
     <source src="senza_titolo_spazializzato.wav" type="audio/wav">
     Il tuo browser non supporta l'elemento audio.
   </audio>
-  <p>Se l’audio non parte automaticamente, <a href="senza titolo.mp3" style="color:#0af;">clicca qui per ascoltarlo</a>.</p>
+  <p>Se l’audio non parte automaticamente, <a href="senza_titolo_spazializzato.wav" style="color:#0af;">clicca qui per ascoltarlo</a>.</p>
 </body>
 </html>
