--- a/audio3d_autoplay.html
+++ b/audio3d_autoplay.html
@@ -8,9 +8,9 @@
 <body style="background-color:#000; color:#fff; display:flex; justify-content:center; align-items:center; height:100vh; flex-direction:column;">
   <h1>🎧 Audio 3D in Riproduzione...</h1>
   <audio autoplay>
-    <source src="senza_titolo_spazializzato.wav" type="audio/wav">
+    <source src="senza_titolo_spazializzato.mp3" type="audio/mpeg">
     Il tuo browser non supporta l'elemento audio.
   </audio>
-  <p>Se l’audio non parte automaticamente, <a href="senza_titolo_spazializzato.wav" style="color:#0af;">clicca qui per ascoltarlo</a>.</p>
+  <p>Se l’audio non parte automaticamente, <a href="senza_titolo_spazializzato.mp3" style="color:#0af;">clicca qui per ascoltarlo</a>.</p>
 </body>
 </html>
